# DEVILKING-Launcher

./: README.md  build_log.txt  matrix_sync.sh  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: devilking_dataset.jsonl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/devilking/os/ai/: AIContext.kt  LocalAICore.kt  RegexRouter.kt  VaultManager.kt
app/src/main/java/com/devilking/os/automation/: DevilkingService.kt
app/src/main/java/com/devilking/os/execution/: CommandExecutor.kt
app/src/main/java/com/devilking/os/system/: DevilkingAccessibilityService.kt  SystemExecutor.kt
app/src/main/java/com/devilking/os/terminal/: DevilkingAccessibilityService.kt  MainActivity.kt  SettingsActivity.kt  SystemExecutor.kt  TerminalAdapter.kt
app/src/main/java/com/high/command/ui/: MainActivity.kt  TerminalAdapter.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accessibility_config.xml
licenses/: android-sdk-license  android-sdk-preview-license
